# workshopfree2-lvgalvao

./: .pre-commit-config.yaml  mkdocs.yml  pyproject.toml
docs/: index.md
