[tool.poetry]
name = "workshopfree2-lvgalvao"
version = "0.1.0"
description = ""
authors = ["LucianoBorba <luhborbafilho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mkdocs = "^1.5.3"
taskipy = "^1.12.2"
black = "^24.3.0"
isort = "^5.13.2"
pip-audit = "^2.7.2"
pydocstyle = "^6.3.0"
pre-commit = "^3.7.0"
gdown = "^5.1.0"
duckdb = "^0.10.1"
streamlit = "^1.33.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.taskipy.tasks]
format = "black . && isort ."
check = "pydocstyle && pip-audit"